# hermod-rs

./: Cargo.toml  README.md  main.cfg
module/: Cargo.toml
module/src/: lib.rs
modules/dummy/: Cargo.toml
modules/dummy/src/: hello.rs  lib.rs
src/: app.rs  config.rs  main.rs  module.rs
