[package]
name = "hermod-rs"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
docopt = "0.8"
env_logger = "0.4"
futures = "0.1"
hyper = "0.11"
libloading = "0.4"
libc = "0.2"
log = "0.4"
toml = "0.4"

hermod-module = { path = "./module" }

[dependencies.serde]
version = "1.0"
features = ["derive"]
