[package]
name = "hermod-rs"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
env_logger = "0.9"
futures = "0.3"
libloading = "0.7"
libc = "0.2"
log = "0.4"
toml = "0.5"

hermod-module = { path = "./module" }

[dependencies.clap]
version = "3.1"
features = ["derive"]

[dependencies.hyper]
version = "0.14"
features = ["http1", "server", "tcp"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.19"
features = ["rt-multi-thread", "macros"]
